filenaming upd -- js func

--- a/project-1/src/main/webapp/pages/empHome.html
+++ b/project-1/src/main/webapp/pages/empHome.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     
-    <script src="../scripts/home.js"></script>
+    <script src="../scripts/empHome.js"></script>
 </body>
 </html>
