--- a/project-1/src/main/webapp/index.html
+++ b/project-1/src/main/webapp/index.html
@@ -18,7 +18,7 @@
         </p>
         <hr class="my-4">
         <p>
-            <form method="get" action="" onsubmit="">
+            <form method="get" action="" onsubmit="userLogin(event.preventDefault())">
                 <div>
                 <label for="UNInput">Username:</label>
                 <input type="text" id="UNInput">
@@ -27,7 +27,7 @@
                     <label for="PWInput">Password:</label>
                     <input type="text" id="PWInput">
                 </div>
-                <button class="btn btn-primary" type="submit">Text</button>
+                <button class="btn btn-primary" type="submit">Login</button>
             </form>
         </p>
     </div>
